--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <div class="bg"></div>
         <div class="loading-text"></div>
+        <div class="pp"></div>
     </body>
     <script src="js/script.js"></script>
 </html>
